# examples_cmake

.github/: README.md
cmake/: build_types.cmake  fix_debug_symbols.cmake  package_layout.cmake  settings.cmake
project_0/: CMakeLists.txt  library_1.cpp  library_1.hpp  library_2.cpp  library_2.hpp
project_1/: CMakeLists.txt  dummy.cpp
project_2/: CMakeLists.txt  library_3.cpp  library_3.hpp  test_1.cpp
project_3/: CMakeLists.txt  executable_1.cpp
